--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -1,7 +1,28 @@
 {% extends "base.html.twig" %}
- {% block title %}Wild Series{% endblock %}
+{% block title %}All programs
+{% endblock %}
 
- {% block body %}
- <h1>{{ website }} index</h1>
+{% block body %}
+	<h1 class="text-center">Toutes les séries:
+	</h1>
+	<main class="container">
+		{% for program in programs %}
+			<div>
+				<h2>{{ loop.index }}
+					/
+					{{ program.title }}
+					- Catégorie :
+					{{ program.category.name }}</h2>
+				<p>{{ program.synopsis }}</p>
+				<a href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a>
+			</div>
+		{% else %}
+			Aucune série trouvée.
+		{% endfor %}
 
- {% endblock %}
+		<a href="{{ path('app_index') }}">
+			Retour à l'accueil
+		</a>
+
+	</main>
+{% endblock %}
